fix(register): treat aliases as aliases and not separate commands